--- a/templates/orders/admin_dashboard.html
+++ b/templates/orders/admin_dashboard.html
@@ -5,7 +5,7 @@
     <!-- Sidebar -->
     <div class="sidebar">
         <div class="sidebar-header">
-            <h3><i class="fas fa-ice-cream"></i> Creamy Delights</h3>
+            <h3><i class="fas fa-ice-cream"></i> AYANNA YOGHURT</h3>
         </div>
         <div class="sidebar-menu">
             <a href="#" class="menu-item active">
